<resources>
    <string name="app_name">CarCare</string>
    <string name="action_settings">Settings</string>
    <string name="carNameTV">Nazwa</string>
    <string name="mileageET">Wpisz przebieg w km</string>
    <string name="mileageTV">Przebieg</string>
    <string name="expensesBtn">Wydatki</string>
    <string name="repairsBtn">Naprawy</string>
    <string name="controlsBtn">Kontrole</string>
    <string name="notifisBtn">Powiadomienia</string>

    <string name="title_activity_car_data">Dane samochodu</string>
    <string name="carNameDatumTV">Nazwa</string>
    <string name="carNameDatumET">Twoja nazwa</string>
    <string name="carData">Dane auta</string>
    <string name="carBrandDatumTV">Marka</string>
    <string name="carModelDatumTV">Model</string>
    <string name="carBrandDatumET">Np. Chevrolet</string>
    <string name="carModelDatumET">Np. Cruze, Aveo, Camaro</string>
    <string name="carProductionYearDatumET">Np. 2015</string>
    <string name="carProductionYearDatumTV">Rok produkcji</string>
    <string name="carEngineTypeDatumTV">Typ silnika</string>
    <string name="carEngineTypeET">Np. benzyna, diesel</string>
    <string name="saveBtn">Zapisz</string>

    <string name="title_activity_notifis">Powiadomienia</string>

    <string name="title_activity_controls">Kontrole</string>

    <string name="title_activity_repairs">Naprawy</string>

    <string name="title_activity_expenses">Wydatki</string>

    <string name="title_activity_add_control">Nowa kontrola</string>
    <string name="newControlTypeTV">Typ kontroli</string>
    <string name="newControlTypeChooseTV">Wybór typu</string>
    <string name="newControlNameTV">Nazwa kontroli</string>
    <string name="newControlNameET">np. wymiana oleju</string>
    <string name="dateTV">Data</string>
    <string name="newControlDateET">Wpisz datę</string>
    <string name="newControlMileageTV">Przebieg</string>
    <string name="newControlDescET">Opis kontroli</string>
    <string name="saveNotifi">Zapisz powiadomienie</string>
    <string name="newControlCycleET">np. 10000</string>
    <string name="newControlCycleTV">Co ile</string>
    <string name="save">Zapisz</string>

    <string name="title_activity_type_choose">Typ kontroli</string>

    <string name="title_activity_add_expense">Nowy wydatek</string>
    <string name="newExpenseNameET">Wpisz nazwę</string>
    <string name="newExpenseNameTV">Nazwa wydatku</string>
    <string name="newExpenseDescET">Opis wydatku</string>
    <string name="newExpenseCostET">Wpisz kwotę</string>
    <string name="newExpenseCostTV">Kwota</string>

    <string name="title_activity_add_repair">Nowa naprawa</string>
    <string name="title_activity_type_choose_repair">Wybór typu wymiany</string>
    <string name="newRepairTypeTV">Typ wymiany</string>
    <string name="newRepairTypeChooseTV">Wybór wymiany</string>
    <string name="newRepairNameTV">Nazwa</string>
    <string name="newRepairNameET">Wpisz nazwę</string>
    <string name="newRepairDateET">Wpisz datę</string>
    <string name="newRepairDescET">Wpisz opis wymiany sezonowej</string>
    <string name="newRepairCycleET">zima/lato</string>
    <string name="newRepairCycleTV">Kiedy</string>
    <string name="newRepairMileageTV">Przebieg</string>
    <string name="newRepairPartsCostTV">Koszt części</string>
    <string name="newRepairPartsCostET">Wpisz koszt</string>
    <string name="newRepairSeasonET">zima/lato</string>
    <string name="newRepairSeasonTV">Sezon</string>
</resources>