<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
            android:text="@string/newRepairTypeTV"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newRepairTypeTV"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

    <TextView
            android:text="@string/newRepairTypeChooseTV"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newRepairTypeChooseTV"
            android:onClick="click"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/newRepairTypeTV"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

    <TextView
            android:text="@string/newRepairNameTV"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newRepairNameTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/newRepairTypeTV" />

    <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/newRepairNameET"
            android:ems="10"
            android:id="@+id/newRepairNameET"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/newRepairNameTV"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/newRepairTypeChooseTV" />

    <TextView
            android:text="@string/dateTV"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newRepairDateTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/newRepairNameTV" />

    <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/newRepairDateET"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/newRepairDateET"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/newRepairDateTV"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/newRepairNameET" />

    <TextView
            android:text="@string/newRepairMileageTV"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newRepairMileageTV"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/newRepairDateTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" />

    <TextView
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newRepairMileageAutofillTV"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/newRepairMileageTV"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/newRepairDateET"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:text="@string/newRepairPartsCostTV"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newRepairPartsCostTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/newRepairMileageTV"
            android:layout_marginTop="8dp" />

    <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/newRepairPartsCostET"
            android:ems="10"
            android:id="@+id/newRepairPartsCostET"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newRepairMileageAutofillTV"
            app:layout_constraintStart_toEndOf="@+id/newRepairPartsCostTV"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.607" />

    <TextView
            android:text="@string/newRepairSeasonTV"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newRepairSeasonTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/newRepairPartsCostTV"
            android:layout_marginTop="8dp" />

    <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/newRepairSeasonET"
            android:ems="10"
            android:id="@+id/newRepairSeasonET"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/newRepairSeasonTV"
            app:layout_constraintHorizontal_bias="0.632"
            app:layout_constraintTop_toBottomOf="@+id/newRepairPartsCostET"
            android:layout_marginTop="8dp" />

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="center"
            android:hint="@string/newRepairDescET"
            android:ems="10"
            android:id="@+id/newRepairDescET"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/newRepairSeasonTV"
            android:layout_marginTop="8dp" />

    <TextView
            android:text="@string/newRepairCycleTV"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newRepairCycleTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/newRepairSaveNotifiBtn" />

    <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/newRepairCycleET"
            android:ems="10"
            android:id="@+id/newRepairCycleET"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/newRepairCycleTV"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/newRepairSaveNotifiBtn" />

    <Button
            android:text="@string/saveNotifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/newRepairSaveNotifiBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>