<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
            android:text="@string/newControlTypeTV"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newControlTypeTV"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

    <TextView
            android:text="@string/newControlTypeChooseTV"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newControlTypeChooseTV"
            android:onClick="click"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/newControlTypeTV"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

    <TextView
            android:text="@string/newControlNameTV"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newControlNameTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/newControlTypeTV" />

    <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/newControlNameET"
            android:ems="10"
            android:id="@+id/newControlNameET"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/newControlNameTV"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/newControlTypeChooseTV" />

    <TextView
            android:text="@string/dateTV"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newControlDateTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/newControlNameTV" />

    <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/newControlDateET"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/newControlDateET"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/newControlDateTV"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/newControlNameET" />

    <TextView
            android:text="@string/newControlMileageTV"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newControlMileageTV"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/newControlDateTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" />

    <TextView
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newControlMileageAutofillTV"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/newControlMileageTV"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/newControlDateET"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="center"
            android:hint="@string/newControlDescET"
            android:ems="10"
            android:id="@+id/newControlDescET"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/newControlMileageTV" />

    <TextView
            android:text="@string/newControlCycleTV"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newControlCycleTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/newControlSaveNotifiBtn" />

    <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/newControlCycleET"
            android:ems="10"
            android:id="@+id/newControlCycleET"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/newControlCycleTV"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/newControlSaveNotifiBtn" />

    <Button
            android:text="@string/saveNotifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/newControlSaveNotifiBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>