<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
            android:text="@string/newExpenseNameTV"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newExpenseNameTV"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

    <EditText
            android:hint="@string/newExpenseNameET"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newExpenseNameET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/newExpenseNameTV"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

    <TextView
            android:text="@string/newExpenseCostTV"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newExpenseCostTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/newExpenseNameTV" />

    <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/newExpenseCostET"
            android:ems="10"
            android:id="@+id/newExpenseCostET"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/newExpenseCostTV"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.539"
            app:layout_constraintTop_toBottomOf="@+id/newExpenseNameET"
            android:layout_marginTop="16dp" />

    <TextView
            android:text="@string/dateTV"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newExpenseDateTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/newExpenseCostTV"
            android:layout_marginTop="16dp" />

    <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/newControlDateET"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/newExpenseDateET"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/newExpenseDateTV"
            app:layout_constraintHorizontal_bias="0.682"
            app:layout_constraintTop_toBottomOf="@+id/newExpenseCostET"
            android:layout_marginTop="16dp" />

    <TextView
            android:text="@string/newControlMileageTV"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newExpenseMileageTV"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/newExpenseDateTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" />

    <TextView
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newExpenseMileageAutofillTV"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/newExpenseMileageTV"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/newExpenseDateET"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.539" />

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="center"
            android:hint="@string/newExpenseDescET"
            android:ems="10"
            android:id="@+id/newExpenseDescET"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/newExpenseMileageTV"
            app:layout_constraintHorizontal_bias="0.0" />

    <TextView
            android:text="@string/newControlCycleTV"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/newExpenseCycleTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/newExpenseSaveNotifiBtn" />

    <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/newControlCycleET"
            android:ems="10"
            android:id="@+id/newExpenseCycleET"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/newExpenseCycleTV"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/newExpenseSaveNotifiBtn" />

    <Button
            android:text="@string/saveNotifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/newExpenseSaveNotifiBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
