<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@android:drawable/sym_def_app_icon"
            android:id="@+id/carPhotoDatumIV"
            android:onClick="click"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

    <TextView
            android:text="@string/carNameDatumTV"
            android:layout_width="118dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:id="@+id/carNameDatumTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/carPhotoDatumIV" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/carNameDatumET"
            android:ems="10"
            android:id="@+id/carNameDatumET"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:minHeight="50dp"
            app:layout_constraintHorizontal_bias="0.6"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/carNameDatumTV"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/carPhotoDatumIV" />

    <TextView
            android:text="@string/carBrandDatumTV"
            android:layout_width="118dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:id="@+id/carBrandDatumTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/carNameDatumTV" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/carBrandDatumET"
            android:ems="10"
            android:id="@+id/carBrandDatumET"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:minHeight="50dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/carNameDatumET"
            app:layout_constraintStart_toEndOf="@+id/carBrandDatumTV"
            android:layout_marginStart="16dp" />

    <TextView
            android:text="@string/carModelDatumTV"
            android:layout_width="118dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:id="@+id/carModelDatumTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/carBrandDatumTV" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/carModelDatumET"
            android:ems="10"
            android:id="@+id/carModelDatumET"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:minHeight="50dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/carBrandDatumET"
            app:layout_constraintStart_toEndOf="@+id/carModelDatumTV"
            android:layout_marginStart="16dp" />

    <TextView
            android:text="@string/carProductionYearDatumTV"
            android:layout_width="118dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:id="@+id/carProductionYearDatumTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/carModelDatumTV" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/carProductionYearDatumET"
            android:ems="10"
            android:id="@+id/carProductionYearDatumET"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:minHeight="50dp"
            app:layout_constraintStart_toEndOf="@+id/carModelDatumTV"
            android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.514"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/carModelDatumET" />

    <TextView
            android:text="@string/carEngineTypeDatumTV"
            android:layout_width="118dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:id="@+id/carEngineTypeDatumTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/carProductionYearDatumTV" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/carEngineTypeET"
            android:ems="10"
            android:id="@+id/carEngineTypeDatumET"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:minHeight="50dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/carProductionYearDatumET"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/carEngineTypeDatumTV" />

    <Button
            android:text="@string/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carDataSaveBtn"
            android:onClick="click"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>